--- a/_config.yml
+++ b/_config.yml
@@ -1,2 +1,6 @@
-title: Brian Prest
-theme: jekyll-theme-slate
+title: Minimal theme
+logo: /assets/img/logo.png
+description: Minimal is a theme for GitHub Pages.
+show_downloads: true
+google_analytics:
+theme: jekyll-theme-minimal
