add email and twitter/github names

--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,8 @@
 title: Brian Prest
 
+email: prest@rff.org
+twitter_username: bprest
+github_username: bprest
 logo: /assets/img/prest_headshot.png
 description: 
 show_downloads: false
