--- a/_config.yml
+++ b/_config.yml
@@ -1,10 +1,10 @@
-title: Brian Prest
+title: Brian C. Prest
 
 email: prest@rff.org
 twitter_username: bprest
 github_username: bprest
 logo: /assets/img/prest_headshot.png
-description: 
+description: Economist, Resources for the Future
 show_downloads: false
 google_analytics:
 
