--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@ email: prest@rff.org
 twitter_username: bprest
 github_username: bprest
 logo: /assets/img/prest_headshot.png
-description: Economist, [Resources for the Future](https://www.rff.org)
+description: Economist, Resources for the Future
 show_downloads: false
 google_analytics:
 
