--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@ title: Brian C. Prest
 email: prest@rff.org
 twitter_username: bprest
 github_username: bprest
-logo: /assets/img/prest_headshot.png
+logo: /assets/img/Prest Headshot.jpg
 description: Fellow, Resources for the Future
 show_downloads: false
 google_analytics: UA-85597225-2
