update google analytics tags

--- a/_config.yml
+++ b/_config.yml
@@ -6,5 +6,5 @@ github_username: bprest
 logo: /assets/img/Prest Headshot.jpg
 description: Fellow, Resources for the Future
 show_downloads: false
-google_analytics: UA-85597225-2
+google_analytics: G-BK3KGS4XHE
 theme: jekyll-theme-minimal
