--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@ email: prest@rff.org
 twitter_username: bprest
 github_username: bprest
 logo: /assets/img/Prest Headshot.jpg
-description: Fellow with Indefinite Appointment, Resources for the Future
+description: Fellow with Indefinite Appointment Resources for the Future
 show_downloads: false
 google_analytics: G-BK3KGS4XHE
 theme: jekyll-theme-minimal
